--- a/angular-personal-dasboard/src/app/app.component.html
+++ b/angular-personal-dasboard/src/app/app.component.html
@@ -8,6 +8,6 @@
   <router-outlet></router-outlet>
 </div>
 <div class="bottom-section">
-  This is where the tabs will be!
+  <app-tabs></app-tabs>
 </div>
 </div>
