--- a/angular-personal-dasboard/src/app/app.component.scss
+++ b/angular-personal-dasboard/src/app/app.component.scss
@@ -4,11 +4,17 @@
 
     height: 100%;
 
-    background-color: #e1e2ed;
+
+    background-image: url("https://images.unsplash.com/photo-1434907652076-85f8401482c3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1920");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+
 }
 
 .top-section{
-    background-color: aquamarine;
+    //background-color: aquamarine;
     text-align: center;
 
     padding: 100px 0;
@@ -25,9 +31,14 @@
     }
 }
 .content-section{
-    background-color: cadetblue;
+    //background-color: cadetblue;
     flex-grow: 1;
 }
 .bottom-section{
-    background-color: coral;
+    //background-color: coral;
+    display: flex;
+
+    app-tabs{
+        margin: auto;
+    }
 }
