--- a/angular-personal-dasboard/src/app/bookmarks/bookmarks.component.html
+++ b/angular-personal-dasboard/src/app/bookmarks/bookmarks.component.html
@@ -1,1 +1,23 @@
-<p>bookmarks works!</p>
+<div class="bookmarks-wrapper">
+    <div class="container">
+
+    <div class="bookmark-titles-container">
+
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    <app-bookmark-title></app-bookmark-title>
+    
+</div>
+</div>
+</div>
