--- a/angular-personal-dasboard/src/app/notes/notes.component.html
+++ b/angular-personal-dasboard/src/app/notes/notes.component.html
@@ -6,5 +6,8 @@
                     <div class="note-card-content"> I am the content</div>
             </div>
         </div>
+        <div class="btns-container btns-centered">
+        <a class="btn">Add</a>
+    </div>
     </div>
 </div>
