--- a/angular-personal-dasboard/src/styles.scss
+++ b/angular-personal-dasboard/src/styles.scss
@@ -20,3 +20,22 @@ h2{
     max-width: 850px;
     margin: auto;
 }
+.btn{
+    display: inline-flex;
+    padding: 12px 22px;
+    background: rgba(black, 0.7);
+
+    color: white;
+    font-size: 18px;
+    border-radius: 4px;
+
+}
+.btns-container{
+    display: flex;
+    margin-top: 20px;
+    &.btns-centered{
+        justify-content: center;
+    }
+
+
+}
