--- a/angular-personal-dasboard/src/app/notes/notes.component.html
+++ b/angular-personal-dasboard/src/app/notes/notes.component.html
@@ -7,7 +7,10 @@
             </div>
         </div>
         <div class="btns-container btns-centered">
-        <a class="btn">Add</a>
+        <a class="btn add-btn" routerLink="add">
+            <i class="material-icons-outlined">add</i>
+            Add
+        </a>
     </div>
     </div>
 </div>
