--- a/angular-personal-dasboard/src/styles.scss
+++ b/angular-personal-dasboard/src/styles.scss
@@ -6,6 +6,7 @@
 
 html{
     font-family: "Inter", sans-serif;
+    color: #222;
 }
 html, body{
     height: 100%;
@@ -15,6 +16,12 @@ h1{
 }
 h2{
     font-size: 40px;
+    margin-bottom: 25px;
+}
+h1.is-bold,
+h2.is-bold{
+    font-weight: bold;
+    letter-spacing: -2px;
 }
 .container{
     max-width: 850px;
@@ -22,12 +29,25 @@ h2{
 }
 .btn{
     display: inline-flex;
+    align-items: center;
     padding: 12px 22px;
     background: rgba(black, 0.7);
 
     color: white;
     font-size: 18px;
+    font-weight: 600;
+    font-family: inherit;
+    border: none;
     border-radius: 4px;
+    text-decoration: none;
+    cursor: pointer;
+    &:hover{
+        background: rgba(black, 0.78);
+        backdrop-filter: blur(2px);
+    }
+    &:active{
+        background: rgba(black, 0.85); 
+    }
 
 }
 .btns-container{
@@ -36,6 +56,48 @@ h2{
     &.btns-centered{
         justify-content: center;
     }
+    .align-end{
+        margin-left: auto;
+    }
 
+}
+.has-blurred-white-bg{
+    background: rgba(white, 0.85);
+    backdrop-filter: blur(20px);
+}
+.textbox,
+.textarea{
+    display: block;
 
+    font-size: 18px;
+    font-family: inherit;
+
+    border: 2px solid rgba(black, 0.3);
+    border-radius: 4px;
+
+    background-color: rgba(white, 0.9);
+
+    padding: 8px 10px;
+
+    margin-bottom: 20px;
+    width: 100%;
+
+    &:hover{
+        background: rgba(white, 0.95);
+    }
+
+    &:focus{
+        background: white;
+        outline:none;
+       
+    }
+    &:hover,
+    &:focus{
+        border-color: rgba(black, 0.42);
+    }
+
+}
+.textarea{
+    resize: vertical;
+    min-height: 100px;
 }
