--- a/angular-personal-dasboard/src/app/add-note/add-note.component.html
+++ b/angular-personal-dasboard/src/app/add-note/add-note.component.html
@@ -1,12 +1,18 @@
 <div class="add-note-wrapper container has-blurred-white-bg">
 <h2 class="is-bold">New Note</h2>
-<form>
-    <input class="textbox" type="text" placeholder="Enter note title ...">
-    <textarea class="textarea" placeholder="Enter note content..."></textarea>
+<form #form="ngForm" (ngSubmit)="onFormSubmit(form)">
+    <div class="form-field">
+        <input class="textbox" ngModel #titleField="ngModel" name="title" type="text" placeholder="Enter note title ..." required>
+    <p *ngIf="titleField.errors.required">Please enter a note title</p>
+    </div>
+    <div class="form-field">
+       <textarea class="textarea" ngModel name="content" placeholder="Enter note content..."></textarea> 
+    </div>
+    
 
     <div class="btns-container">
     <a routerLink="../" class="btn">Cancel</a>
-    <button class="btn align-end">Create Note</button>
+    <button  class="btn align-end">Create Note</button>
 </div>
 </form>
 </div>
