--- a/angular-personal-dasboard/src/styles.scss
+++ b/angular-personal-dasboard/src/styles.scss
@@ -65,6 +65,10 @@ h2.is-bold{
     background: rgba(white, 0.85);
     backdrop-filter: blur(20px);
 }
+.form-field{
+    margin-bottom: 20px;
+}
+
 .textbox,
 .textarea{
     display: block;
@@ -79,7 +83,6 @@ h2.is-bold{
 
     padding: 8px 10px;
 
-    margin-bottom: 20px;
     width: 100%;
 
     &:hover{
