--- a/angular-personal-dasboard/src/app/add-note/add-note.component.html
+++ b/angular-personal-dasboard/src/app/add-note/add-note.component.html
@@ -2,8 +2,12 @@
 <h2 class="is-bold">New Note</h2>
 <form #form="ngForm" (ngSubmit)="onFormSubmit(form)">
     <div class="form-field">
-        <input class="textbox" ngModel #titleField="ngModel" name="title" type="text" placeholder="Enter note title ..." required>
-    <p *ngIf="titleField.errors.required">Please enter a note title</p>
+        <input class="textbox" ngModel #titleField="ngModel" name="title" type="text" placeholder="Enter note title ..." required minlength="3">
+        <ng-container *ngIf="showValidationErrors && titleField.invalid">
+            <p *ngIf="titleField.errors?.['required']">Sisesta märkme pealkiri!</p>
+            <p *ngIf="titleField.errors?.['minlength']">Pealkiri peab sisaldama vähemalt 3 tähte!</p>
+        </ng-container>
+    
     </div>
     <div class="form-field">
        <textarea class="textarea" ngModel name="content" placeholder="Enter note content..."></textarea> 
