--- a/angular-personal-dasboard/src/app/edit-note/edit-note.component.html
+++ b/angular-personal-dasboard/src/app/edit-note/edit-note.component.html
@@ -1,1 +1,22 @@
-<p>edit-note works!</p>
+<div class="edit-note-wrapper container has-blurred-white-bg">
+    <h2 class="is-bold">Edit Note</h2>
+    <form #form="ngForm" (ngSubmit)="onFormSubmit(form)">
+        <div class="form-field">
+            <input class="textbox" ngModel #titleField="ngModel" name="title" type="text" placeholder="Enter note title ..." required minlength="3">
+            <ng-container *ngIf="showValidationErrors && titleField.invalid">
+                <p *ngIf="titleField.errors?.['required']">Sisesta märkme pealkiri!</p>
+                <p *ngIf="titleField.errors?.['minlength']">Pealkiri peab sisaldama vähemalt 3 tähte!</p>
+            </ng-container>
+        
+        </div>
+        <div class="form-field">
+           <textarea class="textarea" ngModel name="content" placeholder="Enter note content..."></textarea> 
+        </div>
+        
+    
+        <div class="btns-container">
+        <a routerLink="../" class="btn">Cancel</a>
+        <button  class="btn align-end">Save</button>
+    </div>
+    </form>
+    </div>
