--- a/angular-personal-dasboard/src/styles.scss
+++ b/angular-personal-dasboard/src/styles.scss
@@ -23,6 +23,10 @@ h2.is-bold{
     font-weight: bold;
     letter-spacing: -2px;
 }
+
+a{
+  text-decoration: none;  
+}
 .container{
     max-width: 850px;
     margin: auto;
