--- a/angular-personal-dasboard/src/app/edit-note/edit-note.component.html
+++ b/angular-personal-dasboard/src/app/edit-note/edit-note.component.html
@@ -1,21 +1,24 @@
 <div class="edit-note-wrapper container has-blurred-white-bg">
     <h2 class="is-bold">Edit Note</h2>
-    <form #form="ngForm" (ngSubmit)="onFormSubmit(form)">
+
+    <p *ngIf="!note">Note not found</p>
+    <form #form="ngForm" (ngSubmit)="onFormSubmit(form)" *ngIf="note">
         <div class="form-field">
-            <input class="textbox" ngModel #titleField="ngModel" name="title" type="text" placeholder="Enter note title ..." required minlength="3">
-            <ng-container *ngIf="showValidationErrors && titleField.invalid">
+            <input class="textbox" [ngModel]="note.title" #titleField="ngModel" name="title" type="text" placeholder="Enter note title ..." required minlength="3">
+            <ng-container *ngIf="titleField.invalid">
                 <p *ngIf="titleField.errors?.['required']">Sisesta märkme pealkiri!</p>
                 <p *ngIf="titleField.errors?.['minlength']">Pealkiri peab sisaldama vähemalt 3 tähte!</p>
             </ng-container>
         
         </div>
         <div class="form-field">
-           <textarea class="textarea" ngModel name="content" placeholder="Enter note content..."></textarea> 
+           <textarea class="textarea" [ngModel]="note.content" name="content" placeholder="Enter note content..."></textarea> 
         </div>
         
     
         <div class="btns-container">
         <a routerLink="../" class="btn">Cancel</a>
+        <button type="button" class="btn" (click)="deleteNote()">Delete</button>
         <button  class="btn align-end">Save</button>
     </div>
     </form>
