--- a/angular-personal-dasboard/src/styles.scss
+++ b/angular-personal-dasboard/src/styles.scss
@@ -56,6 +56,7 @@ a{
 }
 .btns-container{
     display: flex;
+    gap: 12px;
     margin-top: 20px;
     &.btns-centered{
         justify-content: center;
