--- a/angular-personal-dasboard/src/app/todos/todos.component.html
+++ b/angular-personal-dasboard/src/app/todos/todos.component.html
@@ -2,19 +2,21 @@
 <div class="todos-wrapper">
     <div class="container">
 
-    <div class="todo-item completed">
-        <div class="check-box">
-            <i class="material-icons-outlined">check</i>
+        <app-todo-item
+            @todoItemAnim
+            *ngFor="let todo of todos; trackBy: trackById"
+            [todo]="todo"
+            (click)="toggleCompleted(todo)"
+            (editClick)="onEditClick(todo)"
+            (deleteClick)="onDeleteClick(todo)">
+        </app-todo-item>
+        
+        <div class="btns-container btns-centered">
+            <a routerLink="add" class="btn add-btn">
+                <i class="material-icons-outlined">add</i>
+                Add
+            </a>
         </div>
-        <p class="todo-text">This is the todo text!</p>
-    </div>
-    <div class="todo-item">
-        <div class="check-box">
-            <i class="material-icons-outlined">check</i>
-        </div>
-        <p class="todo-text">This is the todo text!</p>
-    </div>
-    
 
     </div>
 </div>
