--- a/angular-personal-dasboard/src/app/bookmark-title/bookmark-title.component.html
+++ b/angular-personal-dasboard/src/app/bookmark-title/bookmark-title.component.html
@@ -1,4 +1,10 @@
-<div class="bookmark-title">
-    <img src="http://google.com/favicon.ico" alt="">
-    <p class="title-text">Google</p>
-</div>
+<a [href]="bookmark.url" target="_blank" class="bookmark-tile">
+    <div class="tile-icon" *ngIf="!faviconError">
+        <img [src]="tileIconSrc" alt="" (error)="faviconError=true">
+    </div>
+    <div class="tile-icon fallback" *ngIf="faviconError">
+        {{ bookmark.name.toUpperCase()[0] }}
+    </div>
+    
+    <p class="tile-text">{{ bookmark.name }}</p>
+</a>
