--- a/angular-personal-dasboard/src/app/app.component.scss
+++ b/angular-personal-dasboard/src/app/app.component.scss
@@ -1,45 +1,71 @@
-.app-wrapper{
+.app-wrapper {
     display: flex;
     flex-direction: column;
 
     height: 100%;
-
-
-    background-image: url("https://images.unsplash.com/photo-1434907652076-85f8401482c3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1920");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-
 }
 
-.top-section{
-    //background-color: aquamarine;
+.bg-img {
+    position: fixed;
+
+    height: 100%;
+    width: 100%;
+    
+    object-fit: cover;
+    
+    z-index: -1;
+}
+
+.top-section {
+    // background-color: aquamarine;
     text-align: center;
 
     padding: 100px 0;
-    h1{
+
+    h1 {
         font-size: 120px;
         font-weight: bold;
         color: #f5f5f5;
         text-shadow: 0px 1px 7px rgba(black, 0.1);
     }
-    h2{
+
+    h2 {
         font-size: 28px;
         color: white;
         text-shadow: 0px 1px 4px rgba(black, 0.1);
     }
 }
-.content-section{
-    //background-color: cadetblue;
+
+.content-section {
+    // background-color: cadetblue;
     flex-grow: 1;
     min-height: 0;
 }
-.bottom-section{
-    //background-color: coral;
+
+.bottom-section {
+    // background-color: coral;
     display: flex;
 
-    app-tabs{
+    app-tabs {
         margin: auto;
+    }
+}
+
+.change-bg-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+
+    background: rgba(black, 0.1);
+    color: rgba(white, 0.7);
+
+    &:hover {
+        background: rgba(black, 0.3);
+        color: white;
+    }
+
+    &:active {
+        transform: translateY(1px);
     }
 }
